--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,171 @@
-.App {
+/* .App {
   text-align: center;
-}
+} */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar{
+  background-color: #081E74;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-around;
+  padding: 10px;
+}
+.link{
   color: white;
+  text-decoration: none;
+  font-size: x-large;
+  font-family: 'Helvetica', Arial, sans-serif;
+  font-style: italic;
+  /* font-family: 'Karla', sans-serif; */
+  /* font-family: 'Lora', serif; */
 }
 
-.App-link {
-  color: #61dafb;
+.link:hover{
+  color: #D1ACED;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.studentbutton{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.button{
+  /* background-color: blue; */
+  color: black;
+  border-radius: 30px;
+  padding: 10px 30px;
+  font-size: large;
+  cursor: pointer;
+}
+
+.home{
+  margin-top: 3em;
+  margin-left: 3em;
+  font-size: large;
+}
+
+.table{
+  background-color: white;
+  border-collapse: collapse; 
+  width: 95%;
+  margin: auto;
+  border: 2px solid white;
+  margin-top: 3rem;
+  margin-bottom: 2em;
+}
+
+th, td {
+  border-top: 1px solid #E5E5E5; 
+  border-bottom: 1px solid #E5E5E5; 
+  padding: 8px;
+  text-align: left;
+  padding: 15px;
+}
+
+th {
+  background-color: #f2f2f2; 
+}
+
+
+
+.inputBox{
+  position: relative;
+  /* width: 200px; */
+
+}
+
+.input1{
+  width: 23em;
+  height: 2em;
+  padding: 10px;
+  /* border: 1px solid grey; */
+  background-color: #D5BDCA;
+ 
+  border-radius: 5px;
+  /* outline: none;
+  color: #fff;
+  font-size: 1em; */
+}
+
+.input2{
+  width: 23em;
+  height: 2em;
+  padding: 10px;
+  /* border: 1px solid grey; */
+  background-color: #F4BAC4;
+ 
+  border-radius: 5px;
+  /* outline: none;
+  color: #fff;
+  font-size: 1em; */
+}
+
+.span1{
+  position: absolute;
+  left: 0.5em;
+  top: 0.7em;
+  /* padding: 10px; */
+  background-color: #D5BDCA;
+  /* pointer-events: none; */
+  /* width: 1em;
+  height: 1em; */
+  font-size: 1em;
+  /* color: black; */
+  /* background: linear-gradient(  #D0BFCD,#F3B0BB );  */
+  /* text-transform: uppercase; */
+  /* transition: 0.5s; */
+}
+.span2{
+  position: absolute;
+  left: 0.5em;
+  top: 0.7em;
+  /* padding: 10px; */
+  background-color: #F4B6C0;
+  /* pointer-events: none; */
+  /* width: 1em;
+  height: 1em; */
+  font-size: 1em;
+  /* color: black; */
+  /* background: linear-gradient(#F3B0BB );  */
+  /* text-transform: uppercase; */
+  /* transition: 0.5s; */
+}
+
+
+.innerparent{
+  margin: auto;
+  margin-top: 7em;
+  margin-bottom: 10em;
+  width: 70%;
+  display: flex;
+  justify-content: space-between;
+  /* gap: 30px; */
+}
+
+
+.buttonmainparent{
+  margin-left: 48em;
+  margin-top: -5em;
+  /* width: 100%; */
+  /* border: 1px solid black; */
   }
-  to {
-    transform: rotate(360deg);
+  .buttons{
+   /* position: absolute;
+   right: 15em;
+  bottom: 10em; */
+  display: flex;
+  gap: 3em;
   }
+
+.buttonin{
+  border-radius: 30px;
+  padding: 10px 80px;
+  font-size: larger;
+}
+
+.button1{
+  background-color: #767676;
+}
+
+.button2{
+  background-color: #EEF7FE;
 }
